--- a/src/assets/scss/common/buttons.scss
+++ b/src/assets/scss/common/buttons.scss
@@ -1,16 +1,22 @@
 .btn {
   display: inline-block;
-  padding: .8em 2em;
+  padding: 26px 0;
   line-height: 1;
   text-transform: uppercase;
   cursor: pointer;
-  border-radius: 30px;
+  font-size: 18px;
+  width: 100%;
+  margin-bottom: 20px;
 
   // default btn
   &.btnDefault {
     color: #ffffff;
-    border: 1px solid #333333;
-    background-color: #333333;
+    border: 1px solid #1f2739;
+    background-color: #1f2739;
+    &:hover {
+      border: 1px solid #2c3446;
+      background-color: #2c3446;
+    }
   }
 
   // primary btn
