--- a/src/assets/scss/common/controls.scss
+++ b/src/assets/scss/common/controls.scss
@@ -3,12 +3,12 @@ label {
   font-size: 16px;
   margin-bottom: 10px;
 }
-input {
-  padding: 16px 26px;
-  margin-bottom: 30px;
-  border-radius: 20px;
-  margin-right: 10px;
-}
+// input {
+//   padding: 16px 26px;
+//   margin-bottom: 30px;
+//   border-radius: 20px;
+//   margin-right: 10px;
+// }
 textarea {
   padding: 16px 26px;
   border-radius: 14px;
