--- a/src/assets/scss/utils/reset.scss
+++ b/src/assets/scss/utils/reset.scss
@@ -15,7 +15,7 @@ time, mark, audio, video {
   margin: 0;
   padding: 0;
   font-size: 100%;
-  vertical-align: baseline;
+  // vertical-align: baseline;
 }
 
 // Links
