--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -90,8 +90,8 @@ section,
 .wrapper-content {
   display: flex;
   flex-direction: column;
-  min-height: 83vh;
-  margin-top: 80px; // if header is fixed do mt: headerHeight
+  min-height: 75vh;
+  margin-top: 100px; // if header is fixed do mt: headerHeight
 }
 
 .container {
@@ -115,6 +115,11 @@ section,
   @media screen and (max-width: $phoneWidth) {
     max-width: $smPhoneWidth;
   }
+}
+
+h1 {
+  font-size: 25px;
+  font-weight: 600;
 }
 
 .view-sm {
